Mobile and  Wide Screen Compatibility, Checked. Almost ocmpletely efficient. Still need to fix required letters not showing up.

--- a/styles/guessyStyles/general.css
+++ b/styles/guessyStyles/general.css
@@ -1,6 +1,8 @@
 *{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
   color: var(--fontColor1);
   padding:0;
   margin:0;
@@ -18,9 +20,16 @@
   display:flex;
 }
 
+
 body{
   overflow: hidden;
   background-color: var(--mainColor1);
-  width:100vw;
-  height:100vh;
+  width:100%;
+  height:100dvh;
+}
+
+
+html, body{
+  min-width: 350px;
+  min-height: 550px;
 }
