--- a/styles/guessyStyles/guessy.css
+++ b/styles/guessyStyles/guessy.css
@@ -20,6 +20,7 @@
   top: 1vh;
   right: 1vw;
   z-index: 101;
+  overflow: hidden;
 
   &:hover{
     cursor: pointer;
@@ -57,24 +58,25 @@
 }
 
 .overall{
+  min-width: 350px;
+  min-height: 550px;
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
   height: 100vh;
   max-width: 100vw;
   padding: 2vw;
-  gap: 2vw;
+  gap: 4%;
 }
 
 .container{
   display: flex;
   flex-direction: column;
   width: 50vw;
-  height: 95vh;
-  gap: 10%;
+  height: 80%;
+  gap: 6%;
   padding: 5vh 3vw 9vh 3vw;
-  align-items: center;
-  justify-content: center;
   background-color: var(--mainColor2);
   border-radius: 4vh;
   animation: floating 4s ease-in-out infinite;
@@ -85,10 +87,10 @@
   background-color: var(--subColor2);
   width: 100%;
   border-radius: 2vh;
-  place-content: center;
-  min-height: 16vh;
-  padding: 3vh;
-  gap:1vw;
+  place-items: center;
+  min-height: 20%;
+  padding: 3%;
+  gap:4%;
 }
 
 .entry .letter{
@@ -97,32 +99,32 @@
 
 .letters{
   width: 100%;
+  height: 100%;
   display: grid;
-  place-content: center;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  padding: 0 5%;
-  gap: 4% 20%;
   place-items: center;
+  grid-template-columns: repeat(4, 1fr);
+  flex: 1;
+  padding: 0 1%;
+  gap: 4% 5%;
 }
 
 .letter{
-  font-size: 2em;
+  font-size: large;
   font-weight: bold;
   color: var(--subColor2);
   animation: dance 3.5s infinite;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  width: clamp(50px, 100%, 200px);
+  height: clamp(50px, 100%, 80px);
   background-color: var(--buttonColor3);
-  padding: 0.5vw;
-  width: 200%;
-  height: 12vh;
-  border-radius: 4vh;
+  padding: 0.5%;
+  border-radius: 20px;
   border: none;
   box-shadow: 10px 0px 20px 5px rgba(0, 0, 0, 0.3);
+  transition: background-color 0.12s, color 0.12s;
 
   &:hover{
     background-color: var(--buttonColor2);
+    color: var(--font-color2);
   }
 }  
 
